Bug 1639368 - Restore `mCurrentTarget` after handling drag gesture; r=smaug

otherwise, generated mouseenter event might be dispatched to a wrong target.

Differential Revision: https://phabricator.services.mozilla.com/D75983